Prevent details from overflowing item view dialog

--- a/frontend/src/app/components/item-view-dialog/item-view-dialog.component.scss
+++ b/frontend/src/app/components/item-view-dialog/item-view-dialog.component.scss
@@ -54,6 +54,10 @@
     margin-right: 10px;
     color: #555;
   }
+
+  & > div {
+    overflow: hidden;
+  }
 }
 
 .item-view-groups {
